@@ -1,21 +1,51 @@
+/*
+ * Shard Launcher
+ * Adapted from Zalith Launcher 2
+ * Copyright (C) 2025 MovTery <movtery228@qq.com> and contributors
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
+ */
+
 package com.lanrhyme.shardlauncher.game.launch
 
 import android.content.Context
 import android.os.Build
+import android.os.LocaleList
+import android.system.Os
+import android.util.ArrayMap
+import androidx.annotation.CallSuper
 import androidx.compose.ui.unit.IntSize
 import com.lanrhyme.shardlauncher.bridge.LoggerBridge
 import com.lanrhyme.shardlauncher.bridge.ZLBridge
-import com.lanrhyme.shardlauncher.game.multirt.RuntimesManager
+import com.lanrhyme.shardlauncher.bridge.ZLNativeInvoker
 import com.lanrhyme.shardlauncher.game.multirt.Runtime
-import com.lanrhyme.shardlauncher.info.InfoDistributor
+import com.lanrhyme.shardlauncher.game.multirt.RuntimesManager
 import com.lanrhyme.shardlauncher.path.LibPath
 import com.lanrhyme.shardlauncher.path.PathManager
 import com.lanrhyme.shardlauncher.settings.AllSettings
-import com.lanrhyme.shardlauncher.utils.logging.Logger
+import com.lanrhyme.shardlauncher.utils.device.Architecture
+import com.lanrhyme.shardlauncher.utils.device.Architecture.ARCH_X86
+import com.lanrhyme.shardlauncher.utils.device.Architecture.is64BitsDevice
 import com.lanrhyme.shardlauncher.utils.platform.getDisplayFriendlyRes
-import com.lanrhyme.shardlauncher.bridge.ZLNativeInvoker
+import com.lanrhyme.shardlauncher.utils.logging.Logger.lError
+import com.lanrhyme.shardlauncher.utils.logging.Logger.lInfo
+import com.lanrhyme.shardlauncher.utils.logging.Logger.lWarning
 import com.oracle.dalvik.VMLauncher
+import org.apache.commons.io.FileUtils
+import org.lwjgl.glfw.CallbackBridge
 import java.io.File
+import java.io.IOException
 import java.util.Locale
 import java.util.TimeZone
 
@@ -31,73 +61,26 @@ abstract class Launcher(
 
     private fun getJavaHome() = if (runtime.isJDK8) "$runtimeHome/jre" else runtimeHome
 
-    /**
-     * Launch the game/JVM application
-     */
     abstract suspend fun launch(): Int
-
-    /**
-     * Change working directory
-     */
     abstract fun chdir(): String
-
-    /**
-     * Get log file name
-     */
     abstract fun getLogName(): String
-
-    /**
-     * Exit handling
-     */
     abstract fun exit()
 
-    /**
-     * Put Java system properties specific to this launcher
-     */
-    protected open fun MutableMap<String, String>.putJavaArgs() {
-        // Override in subclasses for specific Java args
-    }
-
-    /**
-     * Initialize environment variables
-     */
-    protected open fun initEnv(): MutableMap<String, String> {
-        val envMap = mutableMapOf<String, String>()
-        envMap["POJAV_NATIVEDIR"] = PathManager.DIR_NATIVE_LIB
-        envMap["JAVA_HOME"] = getJavaHome()
-        envMap["HOME"] = PathManager.DIR_FILES_PRIVATE.absolutePath
-        envMap["TMPDIR"] = PathManager.DIR_CACHE.absolutePath
-        envMap["PATH"] = System.getenv("PATH") ?: "/sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin"
-        return envMap
-    }
-
-    /**
-     * Set up the JVM environment and launch
-     */
     protected suspend fun launchJvm(
         context: Context,
         jvmArgs: List<String>,
+        userHome: String? = null,
         userArgs: String,
         getWindowSize: () -> IntSize
     ): Int {
         ZLNativeInvoker.staticLauncher = this
 
-        val runtimeLibraryPath = getRuntimeLibraryPath()
-        // ZLBridge.setLdLibraryPath(runtimeLibraryPath)  // Temporarily disabled due to JNI issues
-        // Logger.lInfo("Skipping setLdLibraryPath due to JNI issues - runtime path: $runtimeLibraryPath")
-        
-        // Try to restore setLdLibraryPath - this is critical for library loading
-        try {
-            ZLBridge.setLdLibraryPath(runtimeLibraryPath)
-            Logger.lInfo("Successfully set LD_LIBRARY_PATH: $runtimeLibraryPath")
-        } catch (e: UnsatisfiedLinkError) {
-            Logger.lWarning("Failed to set LD_LIBRARY_PATH, continuing without it: ${e.message}")
-        }
+        ZLBridge.setLdLibraryPath(getRuntimeLibraryPath())
 
-        Logger.lInfo("==================== Env Map ====================")
+        LoggerBridge.appendTitle("Env Map")
         setEnv()
 
-        Logger.lInfo("==================== DLOPEN Java Runtime ====================")
+        LoggerBridge.appendTitle("DLOPEN Java Runtime")
         dlopenJavaRuntime()
 
         dlopenEngine()
@@ -105,181 +88,90 @@ abstract class Launcher(
         return launchJavaVM(
             context = context,
             jvmArgs = jvmArgs,
+            userHome = userHome,
             userArgs = userArgs,
             getWindowSize = getWindowSize
         )
     }
 
+    //伪 suspend 函数，等待 JVM 的退出代码
     private suspend fun launchJavaVM(
         context: Context,
         jvmArgs: List<String>,
+        userHome: String? = null,
         userArgs: String,
         getWindowSize: () -> IntSize
     ): Int {
         val windowSize = getWindowSize()
-        val args = getJavaArgs(userArgs, windowSize).toMutableList()
+        val args = getJavaArgs(userHome, userArgs, windowSize).toMutableList()
         progressFinalUserArgs(args)
 
         args.addAll(jvmArgs)
         args.add(0, "$runtimeHome/bin/java")
 
-        Logger.lInfo("==================== JVM Args ====================")
-        args.forEach { arg ->
-            Logger.lInfo("ARG: $arg")
+        LoggerBridge.appendTitle("JVM Args")
+        val iterator = args.iterator()
+        while (iterator.hasNext()) {
+            val arg = iterator.next()
+            if (arg.startsWith("--accessToken") && iterator.hasNext()) {
+                iterator.next()
+                LoggerBridge.append("JVMArgs: $arg")
+                LoggerBridge.append("JVMArgs: ********************")
+                continue
+            }
+            LoggerBridge.append("JVMArgs: $arg")
         }
 
-        // ZLBridge.chdir(chdir())  // Temporarily disabled due to JNI issues
-        // Logger.lInfo("Skipping chdir due to JNI issues - target dir: ${chdir()}")
-        
-        // Try to restore chdir - this is important for correct working directory
-        try {
-            ZLBridge.chdir(chdir())
-            Logger.lInfo("Successfully changed directory to: ${chdir()}")
-        } catch (e: UnsatisfiedLinkError) {
-            Logger.lWarning("Failed to change directory, continuing without it: ${e.message}")
-        }
+        ZLBridge.setupExitMethod(context.applicationContext)
+        ZLBridge.initializeGameExitHook()
+        ZLBridge.chdir(chdir())
 
         val exitCode = VMLauncher.launchJVM(args.toTypedArray())
-        Logger.lInfo("Java Exit code: $exitCode")
-        exit()
-        onExit(exitCode, false)
-        exit()
-        onExit(exitCode, false)
+        LoggerBridge.append("Java Exit code: $exitCode")
         return exitCode
     }
 
-    private fun setEnv() {
-        val envMap = initEnv()
-        envMap.forEach { (key, value) ->
-            Logger.lInfo("ENV: $key=$value")
-            // Note: Actual environment variable setting would be done via JNI
-        }
-    }
-
     /**
-     * Construct runtime library path
+     * 添加 JVM 参数
      */
-    protected fun getRuntimeLibraryPath(): String {
-        val runtimeHome = RuntimesManager.getRuntimeHome(runtime.name).absolutePath
-        val abi = Build.SUPPORTED_ABIS[0]
-        val base = "$runtimeHome/lib"
-        return listOf(
-            "$base/$abi/jli",
-            "$base/$abi/server", 
-            "$base/$abi",
-            base,
-            PathManager.DIR_NATIVE_LIB
-        ).joinToString(":")
-    }
+    protected open fun MutableMap<String, String>.putJavaArgs() {}
 
-    /**
-     * Load Java runtime libraries via dlopen
-     */
-    protected fun dlopenJavaRuntime() {
-        val libs = listOf(
-            "libjli.so", "libjvm.so", "libverify.so", "libjava.so",
-            "libnet.so", "libnio.so", "libawt.so", "libawt_headless.so"
-        )
-        libs.forEach { lib ->
-            val path = findLibInPath(lib, getRuntimeLibraryPath())
-            if (path != null) {
-                // ZLBridge.dlopen(path)  // Temporarily disabled due to JNI issues
-                // Logger.lInfo("Skipping dlopen due to JNI issues - lib: $path")
-                
-                // Try to restore dlopen for Java runtime libraries - these are critical
-                try {
-                    val success = ZLBridge.dlopen(path)
-                    if (success) {
-                        Logger.lInfo("Successfully loaded Java runtime library: $path")
-                    } else {
-                        Logger.lWarning("Failed to load Java runtime library: $path")
-                    }
-                } catch (e: UnsatisfiedLinkError) {
-                    Logger.lWarning("JNI error loading Java runtime library $path: ${e.message}")
-                }
-            }
-        }
-    }
-
-    private fun findLibInPath(libName: String, path: String): String? {
-        path.split(":").forEach { dir ->
-            val file = File(dir, libName)
-            if (file.exists()) return file.absolutePath
-        }
-        return null
-    }
-
-    protected fun findInLdLibPath(libName: String): String? {
-        val path = getRuntimeLibraryPath()
-        path.split(":").forEach { dir ->
-            val file = File(dir, libName)
-            if (file.exists()) return file.absolutePath
-        }
-        return null
-    }
-
-    /**
-     * Load engine specific libraries
-     */
-    protected open fun dlopenEngine() {
-        // Load OpenAL or other engine specific libs
-        val openal = File(PathManager.DIR_NATIVE_LIB, "libopenal.so")
-        if (openal.exists()) {
-            // ZLBridge.dlopen(openal.absolutePath)  // Temporarily disabled due to JNI issues
-            // Logger.lInfo("Skipping dlopen for OpenAL due to JNI issues - path: ${openal.absolutePath}")
-            
-            // Try to restore OpenAL dlopen - this is important for audio
-            try {
-                val success = ZLBridge.dlopen(openal.absolutePath)
-                if (success) {
-                    Logger.lInfo("Successfully loaded OpenAL library: ${openal.absolutePath}")
-                } else {
-                    Logger.lWarning("Failed to load OpenAL library: ${openal.absolutePath}")
-                }
-            } catch (e: UnsatisfiedLinkError) {
-                Logger.lWarning("JNI error loading OpenAL library: ${e.message}")
-            }
-        }
-    }
-
-    /**
-     * Get basic Java system properties and arguments
-     */
-    private fun getJavaArgs(userArgs: String, windowSize: IntSize): List<String> {
-        // Ensure DNS configuration
-        ensureDNSConfig()
-
-        val userArguments = parseJavaArguments(userArgs).toMutableList()
+    private fun getJavaArgs(
+        userHome: String? = null,
+        userArgumentsString: String,
+        windowSize: IntSize
+    ): List<String> {
+        val userArguments = parseJavaArguments(userArgumentsString).toMutableList()
+        val resolvFile = ensureDNSConfig()
 
         val overridableArguments = mutableMapOf<String, String>().apply {
             put("java.home", getJavaHome())
             put("java.io.tmpdir", PathManager.DIR_CACHE.absolutePath)
             put("jna.boot.library.path", PathManager.DIR_NATIVE_LIB)
-            put("user.home", PathManager.DIR_FILES_PRIVATE.absolutePath)
-            put("user.language", System.getProperty("user.language") ?: Locale.getDefault().language)
+            put("user.home", userHome ?: PathManager.DIR_GAME.absolutePath)
+            put("user.language", System.getProperty("user.language"))
             put("user.country", Locale.getDefault().country)
             put("user.timezone", TimeZone.getDefault().id)
             put("os.name", "Linux")
             put("os.version", "Android-${Build.VERSION.RELEASE}")
             put("pojav.path.minecraft", PathManager.DIR_GAME.absolutePath)
-            put("pojav.path.private.account", PathManager.DIR_FILES_PRIVATE.absolutePath)
+            put("pojav.path.private.account", PathManager.DIR_DATA_BASES.absolutePath)
             put("org.lwjgl.vulkan.libname", "libvulkan.so")
-            
             val scaleFactor = AllSettings.resolutionRatio.getValue() / 100f
             put("glfwstub.windowWidth", getDisplayFriendlyRes(windowSize.width, scaleFactor).toString())
             put("glfwstub.windowHeight", getDisplayFriendlyRes(windowSize.height, scaleFactor).toString())
             put("glfwstub.initEgl", "false")
-            put("ext.net.resolvPath", File(PathManager.DIR_FILES_PRIVATE, "resolv.conf").absolutePath)
+            put("ext.net.resolvPath", resolvFile.absolutePath)
 
-            // Security fixes
             put("log4j2.formatMsgNoLookups", "true")
+            // Fix RCE vulnerability of log4j2
             put("java.rmi.server.useCodebaseOnly", "true")
             put("com.sun.jndi.rmi.object.trustURLCodebase", "false")
             put("com.sun.jndi.cosnaming.object.trustURLCodebase", "false")
 
-            put("net.minecraft.clientmodname", InfoDistributor.LAUNCHER_NAME)
+            put("net.minecraft.clientmodname", "ShardLauncher")
 
-            // FML
+            // fml
             put("fml.earlyprogresswindow", "false")
             put("fml.ignoreInvalidMinecraftCertificates", "true")
             put("fml.ignorePatchDiscrepancies", "true")
@@ -298,7 +190,7 @@ abstract class Launcher(
             val stripped = arg.substringBefore('=')
             val overridden = userArguments.any { it.startsWith(stripped) }
             if (overridden) {
-                Logger.lInfo("Arg skipped: $arg")
+                lInfo("Arg skipped: $arg")
             }
             !overridden
         }
@@ -307,24 +199,36 @@ abstract class Launcher(
         return userArguments
     }
 
-    private fun ensureDNSConfig() {
-        val resolvFile = File(PathManager.DIR_FILES_PRIVATE, "resolv.conf")
+    /**
+     * 确保 DNS 配置文件存在
+     */
+    private fun ensureDNSConfig(): File {
+        val resolvFile = File(PathManager.DIR_GAME, "resolv.conf")
         if (!resolvFile.exists()) {
+            val configText = if (LocaleList.getDefault().get(0).displayName != Locale.CHINA.displayName) {
+                """
+                    nameserver 1.1.1.1
+                    nameserver 1.0.0.1
+                """.trimIndent()
+            } else {
+                """
+                    nameserver 8.8.8.8
+                    nameserver 8.8.4.4
+                """.trimIndent()
+            }
             runCatching {
-                val configText = if (Locale.getDefault().displayName != Locale.CHINA.displayName) {
-                    "nameserver 1.1.1.1\nnameserver 1.0.0.1\n"
-                } else {
-                    "nameserver 8.8.8.8\nnameserver 8.8.4.4\n"
-                }
                 resolvFile.writeText(configText)
             }.onFailure {
-                Logger.lWarning("Failed to create resolv.conf", it)
+                lWarning("Failed to create resolv.conf", it)
+                FileUtils.deleteQuietly(resolvFile)
             }
         }
+        return resolvFile
     }
 
     /**
-     * Finalize user-provided arguments (memory, GC, etc.)
+     * @param args 需要进行处理的参数
+     * @param ramAllocation 指定内存空间大小
      */
     protected open fun progressFinalUserArgs(
         args: MutableList<String>,
@@ -339,25 +243,267 @@ abstract class Launcher(
         args.purgeArg("-XX:+UseLargePagesInMetaspace")
         args.purgeArg("-XX:+UseLargePages")
         args.purgeArg("-Dorg.lwjgl.opengl.libname")
+        // Don't let the user specify a custom Freetype library (as the user is unlikely to specify a version compiled for Android)
+        args.purgeArg("-Dorg.lwjgl.freetype.libname")
+        // Overridden by us to specify the exact number of cores that the android system has
+        args.purgeArg("-XX:ActiveProcessorCount")
 
-        args.add("-Xms${ramAllocation}M")
-        args.add("-Xmx${ramAllocation}M")
+        args.add("-javaagent:${LibPath.MIO_LIB_PATCHER.absolutePath}")
 
-        // Add patches if missing
-        val patcherPath = LibPath.MIO_LIB_PATCHER.absolutePath
-        if (args.none { it.contains("MioLibPatcher.jar") }) {
-            args.add("-javaagent:$patcherPath")
+        //Add automatically generated args
+        val ramAllocationString = ramAllocation.toString()
+        args.add("-Xms${ramAllocationString}M")
+        args.add("-Xmx${ramAllocationString}M")
+
+        // Force LWJGL to use the Freetype library intended for it, instead of using the one
+        // that we ship with Java (since it may be older than what's needed)
+        args.add("-Dorg.lwjgl.freetype.libname=${PathManager.DIR_NATIVE_LIB}/libfreetype.so")
+
+        // Some phones are not using the right number of cores, fix that
+        args.add("-XX:ActiveProcessorCount=${java.lang.Runtime.getRuntime().availableProcessors()}")
+    }
+
+    protected fun MutableList<String>.purgeArg(argStart: String) {
+        removeIf { arg: String -> arg.startsWith(argStart) }
+    }
+
+    protected fun getJavaLibDir(): String {
+        val architecture = runtime.arch?.let { arch ->
+            if (Architecture.archAsInt(arch) == ARCH_X86) "i386/i486/i586"
+            else arch
+        } ?: throw IOException("Unsupported architecture!")
+
+        var libDir = "/lib"
+        architecture.split("/").forEach { arch ->
+            val file = File(runtimeHome, "lib/$arch")
+            if (file.exists() && file.isDirectory()) {
+                libDir = "/lib/$arch"
+            }
+        }
+        return libDir
+    }
+
+    private fun getJvmLibDir(): String {
+        val jvmLibDir: String
+        val path = (if (RuntimesManager.isJDK8(runtimeHome)) "/jre" else "") + getJavaLibDir()
+        val jvmFile = File("$runtimeHome$path/server/libjvm.so")
+        jvmLibDir = if (jvmFile.exists()) "/server" else "/client"
+        return jvmLibDir
+    }
+
+    protected fun getRuntimeLibraryPath(): String {
+        val javaLibDir = getJavaLibDir()
+        val jvmLibDir = getJvmLibDir()
+
+        val libName = if (is64BitsDevice) "lib64" else "lib"
+        val path = listOfNotNull(
+            "$runtimeHome$javaLibDir",
+            "$runtimeHome$javaLibDir/jli",
+            if (runtime.isJDK8) {
+                "$runtimeHome/jre$javaLibDir$jvmLibDir:$runtimeHome/jre$javaLibDir"
+            } else {
+                "$runtimeHome$javaLibDir$jvmLibDir"
+            },
+            "/system/$libName",
+            "/vendor/$libName",
+            "/vendor/$libName/hw",
+            LibPath.JNA.absolutePath,
+            PathManager.DIR_RUNTIME_MOD?.absolutePath,
+            PathManager.DIR_NATIVE_LIB
+        )
+        return path.joinToString(":")
+    }
+
+    protected fun getLibraryPath(): String {
+        val libDirName = if (is64BitsDevice) "lib64" else "lib"
+        val path = listOfNotNull(
+            "/system/$libDirName",
+            "/vendor/$libDirName",
+            "/vendor/$libDirName/hw",
+            PathManager.DIR_RUNTIME_MOD?.absolutePath,
+            PathManager.DIR_NATIVE_LIB
+        )
+        return path.joinToString(":")
+    }
+
+    protected fun findInLdLibPath(libName: String): String {
+        val path = getLibraryPath()
+        return path.split(":").find { libPath ->
+            val file = File(libPath, libName)
+            file.exists() && file.isFile
+        }?.let {
+            File(it, libName).absolutePath
+        } ?: libName
+    }
+
+    private fun locateLibs(path: File): List<File> {
+        val children = path.listFiles() ?: return emptyList()
+        return children.flatMap { file ->
+            when {
+                file.isFile && file.name.endsWith(".so") -> listOf(file)
+                file.isDirectory -> locateLibs(file)
+                else -> emptyList()
+            }
         }
     }
 
-    private fun MutableList<String>.purgeArg(argPrefix: String) {
-        removeAll { it.startsWith(argPrefix) }
+    private fun setEnv() {
+        val envMap = initEnv()
+        envMap.forEach { (key, value) ->
+            LoggerBridge.append("Added env: $key = $value")
+            runCatching {
+                Os.setenv(key, value, true)
+            }.onFailure {
+                lError("Unable to set environment variable.", it)
+            }
+        }
     }
 
-    /**
-     * Helper to parse multiline Java arguments
-     */
-    protected fun parseJavaArguments(args: String): List<String> {
-        return args.split(Regex("\\s+")).filter { it.isNotBlank() }
+    @CallSuper
+    protected open fun initEnv(): MutableMap<String, String> {
+        val envMap: MutableMap<String, String> = ArrayMap()
+        setJavaEnv(envMap = { envMap })
+        return envMap
     }
+
+    private fun setJavaEnv(envMap: () -> MutableMap<String, String>) {
+        val path = listOfNotNull("$runtimeHome/bin", Os.getenv("PATH"))
+
+        envMap().let { map ->
+            map["POJAV_NATIVEDIR"] = PathManager.DIR_NATIVE_LIB
+            map["JAVA_HOME"] = getJavaHome()
+            map["HOME"] = PathManager.DIR_FILES_EXTERNAL.absolutePath
+            map["TMPDIR"] = PathManager.DIR_CACHE.absolutePath
+            map["LD_LIBRARY_PATH"] = getLibraryPath()
+            map["PATH"] = path.joinToString(":")
+            map["AWTSTUB_WIDTH"] = (CallbackBridge.windowWidth.takeIf { it > 0 } ?: CallbackBridge.physicalWidth).toString()
+            map["AWTSTUB_HEIGHT"] = (CallbackBridge.windowHeight.takeIf { it > 0 } ?: CallbackBridge.physicalHeight).toString()
+            map["MOD_ANDROID_RUNTIME"] = PathManager.DIR_RUNTIME_MOD?.absolutePath ?: ""
+
+            if (AllSettings.dumpShaders.getValue()) map["LIBGL_VGPU_DUMP"] = "1"
+            if (AllSettings.zinkPreferSystemDriver.getValue()) map["POJAV_ZINK_PREFER_SYSTEM_DRIVER"] = "1"
+            if (AllSettings.vsyncInZink.getValue()) map["POJAV_VSYNC_IN_ZINK"] = "1"
+            if (AllSettings.bigCoreAffinity.getValue()) map["POJAV_BIG_CORE_AFFINITY"] = "1"
+        }
+    }
+
+    private fun dlopenJavaRuntime() {
+        var javaLibDir = "$runtimeHome${getJavaLibDir()}"
+        val jliLibDir = if (File("$javaLibDir/jli/libjli.so").exists()) "$javaLibDir/jli" else javaLibDir
+
+        if (runtime.isJDK8) {
+            javaLibDir = "$runtimeHome/jre${getJavaLibDir()}"
+        }
+        val jvmLibDir = "$javaLibDir${getJvmLibDir()}"
+        ZLBridge.dlopen("$jliLibDir/libjli.so")
+        ZLBridge.dlopen("$jvmLibDir/libjvm.so")
+        ZLBridge.dlopen("$javaLibDir/libfreetype.so")
+        ZLBridge.dlopen("$javaLibDir/libverify.so")
+        ZLBridge.dlopen("$javaLibDir/libjava.so")
+        ZLBridge.dlopen("$javaLibDir/libnet.so")
+        ZLBridge.dlopen("$javaLibDir/libnio.so")
+        ZLBridge.dlopen("$javaLibDir/libawt.so")
+        ZLBridge.dlopen("$javaLibDir/libawt_headless.so")
+        ZLBridge.dlopen("$javaLibDir/libfontmanager.so")
+        locateLibs(File(runtimeHome)).forEach { file ->
+            ZLBridge.dlopen(file.absolutePath)
+        }
+    }
+
+    @CallSuper
+    protected open fun dlopenEngine() {
+        ZLBridge.dlopen("${PathManager.DIR_NATIVE_LIB}/libopenal.so")
+    }
+}
+
+/**
+ * [Modified from PojavLauncher](https://github.com/PojavLauncherTeam/PojavLauncher/blob/98947f2/app_pojavlauncher/src/main/java/net/kdt/pojavlaunch/utils/JREUtils.java#L411-L456)
+ */
+fun parseJavaArguments(args: String): List<String> {
+    val parsedArguments = mutableListOf<String>()
+    var cleanedArgs = args.trim().replace(" ", "")
+    val separators = listOf("-XX:-", "-XX:+", "-XX:", "--", "-D", "-X", "-javaagent:", "-verbose")
+
+    for (prefix in separators) {
+        while (true) {
+            val start = cleanedArgs.indexOf(prefix)
+            if (start == -1) break
+
+            val end = separators
+                .mapNotNull { sep ->
+                    val i = cleanedArgs.indexOf(sep, start + prefix.length)
+                    if (i != -1) i else null
+                }
+                .minOrNull() ?: cleanedArgs.length
+
+            val parsedSubstring = cleanedArgs.substring(start, end)
+            cleanedArgs = cleanedArgs.replace(parsedSubstring, "")
+
+            if (parsedSubstring.indexOf('=') == parsedSubstring.lastIndexOf('=')) {
+                val last = parsedArguments.lastOrNull()
+                if (last != null && (last.endsWith(',') || parsedSubstring.contains(','))) {
+                    parsedArguments[parsedArguments.lastIndex] = last + parsedSubstring
+                } else {
+                    parsedArguments.add(parsedSubstring)
+                }
+            } else {
+                lWarning("Removed improper arguments: $parsedSubstring")
+            }
+        }
+    }
+
+    return parsedArguments
+}
+
+fun getCacioJavaArgs(
+    screenWidth: Int,
+    screenHeight: Int,
+    isJava8: Boolean
+): List<String> {
+    val argsList: MutableList<String> = ArrayList()
+
+    // Caciocavallo config AWT-enabled version
+    argsList.add("-Djava.awt.headless=false")
+    argsList.add("-Dcacio.managed.screensize=" + (screenWidth * 0.8).toInt() + "x" + (screenHeight * 0.8).toInt())
+    argsList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager")
+    argsList.add("-Dcacio.font.fontscaler=sun.font.FreetypeFontScaler")
+    argsList.add("-Dswing.defaultlaf=javax.swing.plaf.nimbus.NimbusLookAndFeel")
+    if (isJava8) {
+        argsList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit")
+        argsList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment")
+    } else {
+        argsList.add("-Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit")
+        argsList.add("-Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment")
+        argsList.add("-javaagent:${LibPath.CACIO_17_AGENT.absolutePath}")
+
+        argsList.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED")
+        argsList.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED")
+        argsList.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED")
+        argsList.add("--add-opens=java.base/java.util=ALL-UNNAMED")
+        argsList.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED")
+        argsList.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED")
+        argsList.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED")
+        argsList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
+
+        // Opens the java.net package to Arc DNS injector on Java 9+
+        argsList.add("--add-opens=java.base/java.net=ALL-UNNAMED")
+    }
+
+    val cacioClassPath = StringBuilder()
+    cacioClassPath.append("-Xbootclasspath/").append(if (isJava8) "p" else "a")
+    val cacioFiles = if (isJava8) LibPath.CACIO_8 else LibPath.CACIO_17
+    cacioFiles.listFiles()?.onEach {
+        if (it.name.endsWith(".jar")) cacioClassPath.append(":").append(it.absolutePath)
+    }
+
+    argsList.add(cacioClassPath.toString())
+
+    return argsList
 }
